修改BG1A bg5S 550BT文档

--- a/docs/ios/blood_pressure/kn550.md
+++ b/docs/ios/blood_pressure/kn550.md
@@ -111,6 +111,7 @@ and the returned data will contain whether the time need to be set. Version 2.0.
  *   25.  BPInputParameterError=400:  Parameter input error.
  *   26.  BPInvalidOperation = 402:  Invalid Operation
  *   27.  BPDeviceErrorUnsupported = 403:  Unsupported
+ *   28.  BPDeviceError_CommunicationTimeout = 404:  time out
     
  */
 -(void)commandTransferMemoryDataWithTotalCount:(BlockBachCount)totalCount progress:(BlockBachProgress)progress dataArray:(BlockBachArray)uploadDataArray errorBlock:(BlockError)error;
