--- a/docs/ios/tracker/am6.mdx
+++ b/docs/ios/tracker/am6.mdx
@@ -539,7 +539,7 @@ For example, a person goes to bed at 2023-06-27 23:11 in the evening and wakes u
                         fail:(DisposeAM6ErrorBlock)fail;
 ```
 
-### Sleep data
+### Delete Sleep data
 
 ```java
 /**
